list all files to download

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,17 @@
         "url": "http://ddinter.scbdd.com/"
     },
     "dumper" : {
-        "data_url" : ["http://ddinter.scbdd.com/download/"],
+        "data_url" : [
+            "http://ddinter.scbdd.com/static/media/download/ddinter_downloads_code_A.csv",
+            "http://ddinter.scbdd.com/static/media/download/ddinter_downloads_code_B.csv",
+            "http://ddinter.scbdd.com/static/media/download/ddinter_downloads_code_D.csv",
+            "http://ddinter.scbdd.com/static/media/download/ddinter_downloads_code_H.csv",
+            "http://ddinter.scbdd.com/static/media/download/ddinter_downloads_code_L.csv",
+            "http://ddinter.scbdd.com/static/media/download/ddinter_downloads_code_P.csv",
+            "http://ddinter.scbdd.com/static/media/download/ddinter_downloads_code_R.csv",
+            "http://ddinter.scbdd.com/static/media/download/ddinter_downloads_code_V.csv",
+            "http://localhost:8080/dataupload/mysrc/drug_data.json"
+        ],
         "uncompress" : false,
         "release": "version:get_release"
     },
